[project]
name = "yang"
version = "0.1.0"
description = "yang - Yet Another Ninja Generator"
readme = "README.rst"
license = "MIT"
license-files = "LICENSE"

requires-python = ">=3.13"
dependencies = [
    "jinja2"
]

keywords = [
    "c",
    "cmake",
    "ninja",
    "build system",
]

authors = [
  {name = "Steffen Nüssle"},
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
